fix scalding and scrollbar issues

--- a/css/server.css
+++ b/css/server.css
@@ -272,10 +272,8 @@ a:hover {
 
 
 /***BODY***/
-.ng-csp,
 #body-login {
     background-color: #FAFAFA !important;
-    height: 100vh;
 }
 
 #body-login {
@@ -284,27 +282,26 @@ a:hover {
     display: contents;
 }
 
-html,
-body {
-    /*color: #333; Don't do this, this breaks dark theme*/
-    font-family: Arial, Verdana, sans-serif;
-    margin: 0;
-}
-
-#main-element,
-#page {
-    min-height: calc(100% - 200px - 45px - 140px);
-    /*height: calc(100% - 200px - 45px - 140px);*/
-    /* page size - footer - primary-header - header*/
+html {
     padding-bottom: 200px;
-    /*same as combined footer height*/
+    height: calc(100% - 200px);
     background-image: url("../img/bg_page.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 50% auto;
     background-position: 50% 50%;
     background-color: #FAFAFA;
-    
+}
+
+body {
+    height: 100%;
+}
+
+html,
+body {
+    /*color: #333; Don't do this, this breaks dark theme*/
+    font-family: Arial, Verdana, sans-serif;
+    margin: 0;
 }
 
 #b2access-login {
@@ -364,6 +361,15 @@ body {
 
 #body-login .navbar-default {
     margin-left: 20px;
+}
+
+#page,
+#main-element {
+    padding-bottom: 200px;
+    color: unset;
+    background-color: unset !important;
+    background: none;
+    height: auto;
 }
 
 #main-element>.container,
@@ -441,11 +447,6 @@ table {
     .page-wrap .header {
         height: 210px;
     }
-
-    #page {
-        /* page size - footer - primary-header - header*/
-        min-height: calc(100% - 200px - 45px - 240px);
-    }
 }
 
 @media only screen and (max-width: 850px) {
@@ -466,15 +467,6 @@ table {
         justify-content: flex-start;
     }
 
-    #main-element,
-    #page {
-        padding-bottom: 280px;
-        /*Footer + secondary footer height*/
-        /* page size - footer - primary-header - header*/
-        min-height: calc(100% - 280px - 45px - 240px);
-        /*height: calc(100% - 280px - 45px - 240px);*/
-    }
-
     .page-wrap .footer #menu ul {
         display: flex;
         align-items: center;
@@ -489,5 +481,11 @@ table {
     #page .login-box,
     #page .login-option {
         max-width: 95%;
+    }
+
+    #page,
+    #main-element,
+    html {
+        padding-bottom: 280px;
     }
 }
